--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,5 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <item 
+        android:id="@+id/action_add_server"
+        android:orderInCategory="1000"
+        android:showAsAction="never"
+        android:title="@string/add_server"/>
+    
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
