--- a/res/menu/add_server.xml
+++ b/res/menu/add_server.xml
@@ -1,9 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+    <item android:id="@+id/item1" android:title="@string/add_server_confirm_text" android:showAsAction="always" android:onClick="onAddButtonClick" android:orderInCategory="100"></item>
 
 </menu>
