--- a/res/layout/fragment_current_players.xml
+++ b/res/layout/fragment_current_players.xml
@@ -6,11 +6,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <ListView
-        android:id="@+id/player_list_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ListView>
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignLeft="@+id/player_list_fragment"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/player_list_header"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/player_list_header" />
+
+        <ListView
+            android:id="@+id/player_list_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </ListView>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/no_players_online"
